--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="/public/output.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- In your public/index.html just before the closing </body> tag -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtbQL7AJ7yOgbl2b75vghAdCW_JTouE6M&libraries=places"></script>
